validaciones en el formulario de registro

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <label>Correo</label>
                     <input type="email" id="register-email" placeholder="Ingresa tu correo" required />
                     <label>Género</label><br>
-                    <input type="radio" id="radio-male" name="gender" value="male" required />Masculino
+                    <input type="radio" id="radio-male" name="gender" value="male" required checked />Masculino
                     <input type="radio" id="radio-female" name="gender" value="female" required />Femenino               
                     <br>
                     <label>Contraseña</label>
